--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@softvisio/app-text-search",
+    "name": "@c0rejs/app-text-search",
     "version": "2.2.9",
     "description": "Text search application component",
     "keywords": [
@@ -19,7 +19,7 @@
     "author": "root <root@softvisio.net>",
     "type": "module",
     "imports": {
-        "#core/*": "@softvisio/core/*",
+        "#core/*": "@c0rejs/core/*",
         "#lib/*": "./lib/*.js",
         "#resources/*": "./resources/*"
     },
@@ -38,6 +38,6 @@
         "gpt-tokenizer": "^3.0.0"
     },
     "peerDependencies": {
-        "@softvisio/core": "^7.101.6"
+        "@c0rejs/core": "^7.101.6"
     }
 }
