--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
         "softvisio",
         "text search"
     ],
-    "homepage": "https://softvisio-node.github.io/app-text-search/",
+    "homepage": "https://c0rejs.github.io/app-text-search/",
     "bugs": {
-        "url": "https://github.com/softvisio-node/app-text-search/issues",
+        "url": "https://github.com/c0rejs/app-text-search/issues",
         "email": "root <root@softvisio.net>"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/softvisio-node/app-text-search.git"
+        "url": "git+https://github.com/c0rejs/app-text-search.git"
     },
     "license": "ISC",
     "author": "root <root@softvisio.net>",
